Bug 267670 - Using 'Cancel' on a password dialog does still open the application associated with a file
Summary: Using 'Cancel' on a password dialog does still open the application associate...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Raphael Kubo da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-05 01:14 UTC by Elias Probst
Modified: 2015-06-04 14:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.07.80
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-03-05 01:14:50 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

When clicking on a file in an archive which is password protected and clicking cancel in the appearing dialog, the application associated with the file which has been clicked is opened anyways.

Reproducible: Always

Steps to Reproduce:
1. Open a password protected archive which contains a file which is opened in an external application (not a text file or the like which is opened in the Ark previewer) like a music file.
2. Click on such a file
3. The password dialog appears
4. Cancel the password dialog

Actual Results:  
The application associated to this file is opened anyways and fails to open the file.

Expected Results:  
I'd expect that nothing happens at all after cancelling the password dialog.

OS: Linux (x86_64) release 2.6.37-rc8+
Compiler: x86_64-pc-linux-gnu-gcc
Ark 2.16
Comment 1 ulliber25 2014-03-10 11:56:36 UTC
Not yet fixed in Ark 2.19
Comment 2 Ragnar Thomsen 2015-06-04 14:08:26 UTC
Git commit 8dd0b02a72bafbab21e83ce5ddfa5f01171ac4e5 by Ragnar Thomsen.
Committed on 04/06/2015 at 14:05.
Pushed by rthomsen into branch 'frameworks'.

Implement a cancelled() signal to fix cancellation of password dialogs

Implement a cancelled() signal in ReadOnlyArchiveInterface. This signal
is emitted in CliInterface when the user cancels a password dialog. The
signal is connected to a slot in Job which sets KJob::error to
KJob::KilledJobError.

The callers (Part and BatchExtract) are modified to do nothing if the
error code is KJob::KilledJobError when running ListJobs/ExtractJobs/
AddJobs/DeleteJobs. This fixes an issue where the user cancels the
"Enter password" dialog and the UI keeps being blocked and/or error
messageboxes appear.
FIXED-IN: 15.07.80
REVIEW: 123967

M  +5    -4    app/batchextract.cpp
M  +1    -0    kerfuffle/archiveinterface.h
M  +5    -0    kerfuffle/cliinterface.cpp
M  +8    -1    kerfuffle/jobs.cpp
M  +1    -0    kerfuffle/jobs.h
M  +11   -7    part/part.cpp

http://commits.kde.org/ark/8dd0b02a72bafbab21e83ce5ddfa5f01171ac4e5